--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p>Siga nossas redes Social</p>
 
                 <div id="footer_social_media">
-                    <a href="#" class="footer-link" id="instagram">
+                    <a href="https://www.instagram.com/ong.amibem/profilecard/?igsh=MWtycTA5Z3E1NXNmaQ%3D%3D" class="footer-link" id="instagram">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
 
